force-app/main/default/objects/SOA_Items__c/SOA_Items__c.object-meta.xml
<CustomObject>
    <label>SOA Item</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>SOA Items ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>