force-app/main/default/objects/SOA_Items__c/fields/Amount_Buying__c.field-meta.xml
<CustomField>
    <fullName>Amount_Buying__c</fullName>
    <label>Amount Buying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>