force-app/main/default/objects/SOA_Items__c/fields/Amount_Selling__c.field-meta.xml
<CustomField>
    <fullName>Amount_Selling__c</fullName>
    <label>Amount Selling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>