force-app/main/default/objects/SOA_Items__c/fields/Currency_Buying__c.field-meta.xml
<CustomField>
    <fullName>Currency_Buying__c</fullName>
    <formula>text( Billings__r.CurrencyBuying__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency - Buying</label>
    <type>Text</type>
</CustomField>