force-app/main/default/objects/SOA_Items__c/fields/Currency_Selling__c.field-meta.xml
<CustomField>
    <fullName>Currency_Selling__c</fullName>
    <formula>text( Billings__r.CurrencySelling__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency - Selling</label>
    <type>Text</type>
</CustomField>