force-app/main/default/objects/SOA_Items__c/fields/H_B_L_No__c.field-meta.xml
<CustomField>
    <fullName>H_B_L_No__c</fullName>
    <formula>Billings__r.FTMSSO__r.HBLNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H B/L No.</label>
    <type>Text</type>
</CustomField>