force-app/main/default/objects/SOA_Items__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <formula>Billings__r.ConsolidationShipmentName__r.FileNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job No</label>
    <type>Text</type>
</CustomField>