force-app/main/default/objects/SOA_Items__c/fields/M_B_L_No__c.field-meta.xml
<CustomField>
    <fullName>M_B_L_No__c</fullName>
    <formula>Billings__r.ConsolidationShipmentName__r.MBLorMAWBNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M B/L No.</label>
    <type>Text</type>
</CustomField>