force-app/main/default/objects/SOA_Items__c/fields/Quantity_Buying__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Buying__c</fullName>
    <formula>Billings__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity - Buying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>