force-app/main/default/objects/SOA_Items__c/fields/SOA__c.field-meta.xml
<CustomField>
    <fullName>SOA__c</fullName>
    <label>SOA</label>
    <referenceTo>SOA__c</referenceTo>
    <relationshipLabel>SOA Items</relationshipLabel>
    <relationshipName>SOA_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>