force-app/main/default/objects/SOA_Items__c/fields/Unit_Price_Buying__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Buying__c</fullName>
    <formula>Billings__r.UnitPriceofBuyingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price - Buying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>