force-app/main/default/objects/SOA_Items__c/fields/VAT_Buying__c.field-meta.xml
<CustomField>
    <fullName>VAT_Buying__c</fullName>
    <formula>Billings__r.TaxRatioBuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT - Buying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>