force-app/main/default/objects/SOA_Items__c/fields/VAT_Selling__c.field-meta.xml
<CustomField>
    <fullName>VAT_Selling__c</fullName>
    <formula>Billings__r.TaxRatioSelling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT - Selling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>