force-app/main/default/objects/SOA_Items__c/recordTypes/PAYABLE.recordType-meta.xml
<RecordType>
    <fullName>PAYABLE</fullName>
    <active>true</active>
    <label>PAYABLE</label>
</RecordType>