force-app/main/default/objects/SOA_Items__c/recordTypes/RECEIVABLE.recordType-meta.xml
<RecordType>
    <fullName>RECEIVABLE</fullName>
    <active>true</active>
    <label>RECEIVABLE</label>
</RecordType>